# RaylibSimulator

./: .gitignore  CMakeLists.txt  main.cpp  tests
resources/: drone.json  plane.json  spaceship.json
resources/model/: dragon_spaceship.mtl  inertia.py  requirements.txt
src/: CMakeLists.txt  first.cpp  first.h
src/app/: CMakeLists.txt  app.cpp  app.h
src/core/: CMakeLists.txt
src/core/app/: CMakeLists.txt  app.cpp  app.h
src/core/image/: CMakeLists.txt  loader.cpp  loader.h
src/core/object/: CMakeLists.txt  object.cpp  object.h
src/core/quaternion/: CMakeLists.txt  quaternion.cpp  quaternion.h
src/drone/: CMakeLists.txt  drone.cpp  drone.h
src/image/: CMakeLists.txt  loader.cpp
src/object/: object.cpp  object.h
src/plane/: CMakeLists.txt  plane.cpp  plane.h
src/quaternion/: CMakeLists.txt  quaternion.h
src/spaceship/: CMakeLists.txt  plane.cpp  plane.h  spaceship.cpp  spaceship.h
test/: CMakeLists.txt  main.cpp
test/quaternion/: CMakeLists.txt  quaternion.cpp  quaternion.h  test_quaternion.cpp  test_quaternion.h
